package behavioral.observer.atm;

public interface Observer {
    void kiemTraSoDu(float soTienRut);
    void nhanThongBao(String thongBao);
}
